Correct for horizontal scrolling glitch.

--- a/css/orfex.scss
+++ b/css/orfex.scss
@@ -389,6 +389,10 @@ margin: 1em 0 1em 0;
 
 // Begin IDs
 
+#page {
+	overflow: hidden;
+}
+
 #content {
 }
 
